syntax = "proto3";

package mkit.service.post.v1;

option go_package = "github.com/ygpark2/njro/service/post/proto/post";
option java_multiple_files = true;
option java_package = "mkit.service.post.v1";

import "google/protobuf/wrappers.proto";
// import "shared/proto/common/common.proto";
import "service/post/proto/entities/entities.proto";
import "validate/validate.proto";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// Post Service
service PostService {
    rpc Exist (ExistRequest) returns (ExistResponse);
    rpc List (ListRequest) returns (ListResponse);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue board_id = 2 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 3 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 6 [(validate.rules).string.min_len = 5];
    repeated string tags = 7 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 8 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 9 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 10 [(validate.rules).string.min_len = 3];
}

message ExistResponse {
    option (validate.disabled) = true;
    bool result = 1;
}

message ListRequest {
    google.protobuf.Int32Value limit = 1 [(validate.rules).int32 = { gte: 1 lte: 100 }];
    google.protobuf.Int32Value page = 2 [(validate.rules).int32.gte = 1];
    google.protobuf.StringValue sort = 3;
    google.protobuf.StringValue board_id = 4 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 5 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 6 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 7 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 8 [(validate.rules).string.min_len = 5];
    repeated string tags = 9 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 10 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 11 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 12 [(validate.rules).string.min_len = 3];
}

message ListResponse {
    option (validate.disabled) = true;
    repeated mkit.service.post.entities.v1.Post results = 1;
    int64 total = 2;
}

message GetRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue board_id = 2 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 3 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 6 [(validate.rules).string.min_len = 5];
    repeated string tags = 7 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 8 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 9 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 10 [(validate.rules).string.min_len = 3];
}

message GetResponse {
    option (validate.disabled) = true;
    mkit.service.post.entities.v1.Post result = 1;
    // basic.Error error =2;
}

message CreateRequest {
    google.protobuf.StringValue board_id = 2 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 3 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 6 [(validate.rules).string.min_len = 5];
    repeated string tags = 7 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 8 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 9 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 10 [(validate.rules).string.min_len = 3];
}

message CreateResponse {
    option (validate.disabled) = true;
    mkit.service.post.entities.v1.Post result = 1;
}

message UpdateRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue board_id = 2 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 3 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 6 [(validate.rules).string.min_len = 5];
    repeated string tags = 7 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 8 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 9 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 10 [(validate.rules).string.min_len = 3];
}

message UpdateResponse {
    option (validate.disabled) = true;
    mkit.service.post.entities.v1.Post result = 1;
}

message DeleteRequest {
    google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // Not Working
    google.protobuf.StringValue board_id = 2 [(validate.rules).string.uuid = true];
    google.protobuf.StringValue title = 3 [(validate.rules).string.min_len = 2];
    google.protobuf.StringValue slug = 4 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue category = 5 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue password = 6 [(validate.rules).string.min_len = 5];
    repeated string tags = 7 [(validate.rules).repeated = {min_items: 0, max_items: 20}];
    google.protobuf.StringValue content = 8 [(validate.rules).string.min_len = 3];
    google.protobuf.StringValue email = 9 [(validate.rules).string.email = true];
    google.protobuf.StringValue writer = 10 [(validate.rules).string.min_len = 3];
}

message DeleteResponse {
    option (validate.disabled) = true;
    mkit.service.post.entities.v1.Post result = 1;
}
